# p4wnp1-Gui

./: __main__.py  basemodel.py  main.py  pyproject.toml
app/: client.py
app/gui/: gui.py
app/programs/: bonnetButtons.py  menu.py
programs/: joystick.py
