[tool.poetry]
name = "p4wnp1-gui"
version = "0.1.0"
description = ""
authors = ["saggins <win32prog@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
adafruit-circuitpython-ssd1306 = "^2.11.2"
pydantic = "^1.8.1"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
